IE Hostview distortion fixed (#2394)

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/_host-table.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/_host-table.scss
@@ -105,3 +105,6 @@
 .filters {
   background-color: background-color(primary, darkest, somewhat-opaque);
 }
+.rsa-data-table-column-selector-panel section {
+  position: relative;
+}
